# remote-rc-bluetooth-server

./: Cargo.toml  Cross.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
src/config/: mod.rs  spec.rs  uuid.rs
src/core/: adapter.rs  advertise.rs  app.rs  commands.rs  handlers.rs  hardware.rs  mod.rs
