[package]
name = "remote-rc-bluetooth-server"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
tokio = { version = "1.44.2", features = ["full"] }
bluer = { version = "0.17.3", features = ["full"] }
rppal = "0.22.1"

[target.aarch64-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt update && apt install -y libdbus-1-dev pkg-config"
]

[target.riscv64gc-unknown-linux-gnu]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt update && apt install -y libdbus-1-dev pkg-config"
]